# AgenteSoll

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: leads_fake.json
src/soll/: __init__.py  cli.py  config.py  logging_setup.py  schemas.py
src/soll/adapters/buffer_store/: base.py  memory.py  redis.py
src/soll/adapters/calendar/: __init__.py  base.py  google_calendar.py
src/soll/adapters/sheets/: __init__.py  base.py  gspread_mirror.py  images.py
src/soll/adapters/transcriber/: base.py  openai_whisper.py
src/soll/adapters/vision/: base.py  openai_vision.py
src/soll/adapters/whatsapp/: base.py  meta_cloud.py  zapi.py
src/soll/agent/: lead_store.py  prompts.py  soll_agent.py  tools.py
src/soll/api/: webhook.py
src/soll/core/: buffer.py  cal_kwats.py  clear_conversation.py  convert_to_text.py  filtered_return.py  split_response.py
src/soll/tools/: auth_calendar.py  test_zapi_send.py
