[project]
name = "soll"
version = "0.1.0"
description = "Soll - Agente de pré-venda WhatsApp da Sollar System Engenharia (camada de pré-processamento)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
    "redis>=5.2",
    "openai>=1.55",
    "pypdf>=5.1",
    "rich>=13.9",
    "gspread>=6.2.1",
    "google-auth>=2.49.2",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
]

[project.scripts]
soll-cli = "soll.cli:main"
soll-server = "soll.api.webhook:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "fakeredis>=2.26",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soll"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/soll"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
